cabal-version:      3.4
name:               haskell-utils
version:            0.1.0.0
synopsis:           Ambar utility modules
-- description:
homepage:           github.com/ambarltd/haskell-utils
license:            NONE
author:             Ambar
maintainer:         contact@ambar.cloud
-- copyright:
category:           NONE
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
    hs-source-dirs:   src
    default-language: GHC2021

test-suite haskell-utils-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        haskell-utils
